  (using ctypes. The ffmpeg libraries themselves are not included, they must
  already be on the system)
- ODEDynamics: New option use_quick_step (patch 2977479). This can be used
  to select whether the ODE quickStep() or the step() method should be
  used for the simulation.
- The viewer tool window is now resizable (patch 2977469).

Bug fixes/enhancements:

- ODEDynamics: Objects can now be removed from the simulation. An object that
  is part of a simulation automatically receives a new attribute "manip" which
  is its body manipulator. The manipulator has a new attribute "odegeoms" to
  access the underlying collision geometry. When setting forces, torques, etc
  on objects, the objects are automatically enabled again if they were disabled.
  Objects without a mass get a default mass of 1.0. The material setting in
  collision events now always has a well-defined order. New joint object
  ODEFixedJoint. (patch 2983970)
- eventmanager: Disconnecting/connecting event handlers while an event was handled
  could result in handlers not being called (patch 2983964).
- GLRenderer: OpenGL errors could leak through into Python and produce exceptions
  on unrelated PyOpenGL calls. The error flag is now cleared at the end of
  the C++ rendering code (bug #2974422).
- sequence: SeqString comparison doesn't convert its argument into fresh
  SeqStrings anymore. This means comparing a SeqString with a regular string
  uses regular string comparison semantics. It also means, a SeqString that
  has a number replaced by a string containing a number will treat this part
  as a string, not a number. This change considerably increases performance when
  sorting large string lists. 
- sequence: Comparison of SeqStrings didn't work properly when the string parts
  did already differ (in that case, numbers were completely ignored)
- sequence: buildSequences() didn't work properly when assumeFiles was set to